--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,17 @@
     </head>
 
     <body >
-        <div class="container">
-            //= templates/header/header.html
+        <div class="container container-all">
+            //= templates/0_header/header.html
+            //= templates/1_banner/banner.html
+            //= templates/2_credo-trade/credo-trade.html
+            //= templates/3_best/best.html
+            //= templates/4_footer/footer.html
         </div>
+        //= templates/5_agreements/agrement.html
+        //= templates/5_agreements/confidentiality.html
+        //= templates/5_agreements/risks.html
+    <script type="text/javascript" src="./js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
     </body>
 </html>
